# tvm-ffi

./: .clang-tidy  .cmake-format.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  build_backend.py  pyproject.toml
.github/workflows/: ci_mainline_only.yml  ci_test.yml  orcjit-build.yml  orcjit-tests.yml  publish_orcjit_wheel.yml  publish_wheel.yml  torch_c_dlpack.yml  torch_c_dlpack_windows.yml  torch_c_dlpack_yml
addons/torch_c_dlpack_ext/: LICENSE  README.md  build_aot_libs.sh  build_aot_wheels.bat  build_aot_wheels.sh  build_backend.py  build_so.sh  build_wheel.sh  pyproject.toml  setup.py  torch_c_dlpack_ext.cc
addons/tvm-ffi-orcjit/: CMakeLists.txt  pyproject.toml
addons/tvm-ffi-orcjit/tests/: CMakeLists.txt  README.md  test_basic.py
addons/tvm-ffi-orcjit/tests/sources/: test_ctor_dtor.cc  test_funcs_cuda.cu
addons/tvm_ffi_orcjit/: CMakeLists.txt  ORCJIT_PRIMER.md  README.md
cmake/: config.cmake  tvm_ffi-config.cmake
cmake/Utils/: AddGoogleTest.cmake  AddLibbacktrace.cmake  CxxWarning.cmake  EmbedCubin.cmake  Library.cmake  Sanitizer.cmake
docs/: Makefile  README.md  build_multiversion.sh  conf.py  index.rst  run_sphinx_multiversion.py
docs/_static/: versions.json
docs/concepts/: abi_overview.md  abi_overview.rst  func_module.rst  object_and_class.rst  structural_eq_hash.rst  tensor.rst
docs/dev/: binary_layout.md  source_build.rst
docs/get_started/: quick_start.md  quickstart.rst  ship_one_wheel.rst
docs/guides/: build_from_source.md  compiler_integration.md  cpp_guide.md  cpp_lang_guide.md  cubin_launcher.md  cubin_launcher.rst  dataclass_reflection.rst  export_func_cls.rst  julia_guide.md  kernel_library_guide.rst  python_guide.md  python_lang_guide.md  python_packaging.md  rust_guide.md  rust_lang_guide.md  stable_c_abi.md
docs/packaging/: cpp_tooling.rst  python_packaging.rst  rust_stubgen.md  stubgen.rst
docs/tools/: write_versions_json.py
examples/abi_overview/: example_code.c
examples/cubin_launcher/: CMakeLists.txt  README.md  benchmark_overhead.py  example_nvrtc_cubin.py  example_triton_cubin.py
examples/cubin_launcher/dynamic_cubin/: CMakeLists.txt  main.py
examples/cubin_launcher/dynamic_cubin/src/: lib_dynamic.cc
examples/cubin_launcher/embedded_cubin/: CMakeLists.txt
examples/cubin_launcher/embedded_cubin/cpp_embed/: CMakeLists.txt
examples/cubin_launcher/embedded_cubin/cpp_embed/src/: kernel_fatbin.fatbin  lib_embedded.cc
examples/cubin_launcher/embedded_cubin/embed_with_tvm_ffi/: CMakeLists.txt
examples/cubin_launcher/embedded_cubin/embed_with_tvm_ffi/src/: lib_embedded.cc
examples/cubin_launcher/embedded_cubin/include_bin2c/: CMakeLists.txt
examples/cubin_launcher/embedded_cubin/include_bin2c/src/: lib_embedded.cc
examples/cubin_launcher/embedded_cubin/src/: lib_embedded.cc
examples/cubin_launcher/src/: lib_dynamic.cc  lib_embedded.cc
examples/inline_module/: main.py
examples/kernel_library/: load_scale.py
examples/packaging/: CMakeLists.txt  README.md  pyproject.toml  run_example.py
examples/quick_start/: CMakeLists.txt  README.md  run_example.sh
examples/quickstart/: CMakeLists.txt  README.md  compile.sh  load_cpp.cc  load_cupy.py  load_jax.py  load_numpy.py  load_pytorch.py  run_all_cpu.bat  run_all_cuda.sh
examples/quickstart/compile/: add_one_cpu.cc  add_one_cuda.cu
examples/quickstart/load/: load_cpp.cc  load_cupy.py  load_jax.py  load_numpy.py  load_paddle.py  load_pytorch.py
examples/quickstart/src/: add_one_cpu.cc  add_one_cuda.cu
examples/rust_stubgen/: CMakeLists.txt  README.md
examples/stable_c_abi/: CMakeLists.txt  README.md  run_all.bat
julia/: README.md
julia/TVMFFI/: Manifest.toml  Project.toml  README.md
python/tvm_ffi/: __init__.py  _convert.py  _dtype.py  _dunder.py  _ffi_api.py  _optional_torch_c_dlpack.py  _pyast_evaluator.py  _pyast_translator.py  _pyast_visitor.py  _tensor.py  access_path.py  config.py  container.py  core.pyi  dialect_autogen.py  error.py  ir_traits.py  libinfo.py  module.py  parse_hook.py  pyast.py  registry.py  serialization.py  stream.py  structural.py  stubgen.py  testing.py
rust/: .rustfmt.toml  Cargo.toml
rust/tvm-ffi/: Cargo.toml
rust/tvm-ffi-macros/: Cargo.toml
rust/tvm-ffi-stubgen/: Cargo.toml  README.md  build.rs
rust/tvm-ffi-stubgen/src/: cli.rs  ffi.rs  generate.rs  lib.rs  main.rs  model.rs  repr_c.rs  schema.rs  tests.rs  utils.rs
rust/tvm-ffi-stubgen/tests/: stubgen.rs
rust/tvm-ffi-sys/: Cargo.toml  build.rs
src/ffi/: auto_init.cc  backtrace.cc  container.cc  custom_allocator.cc  dtype.cc  error.cc  function.cc  object.cc  object_internal.h  tensor.cc  torch_c_dlpack_ext.cc  type_parser.cc
tests/cpp/: CMakeLists.txt  test_abi_object.cc  test_any.cc  test_array.cc  test_device.cc  test_dict.cc  test_dtype.cc  test_expected.cc  test_function.cc  test_list.cc  test_memory.cc  test_metadata.cc  test_object.cc  test_object_ptr.cc  test_optional.cc  test_overload.cc  test_reflection.cc  test_shape.cc  test_string.cc  test_tensor.cc  test_tuple.cc  test_type_parser.cc  test_variant.cc  testing_object.h
tests/docker/: Dockerfile
tests/lint/: check_asf_header.py  check_file_type.py  check_version.py  clang_tidy_precommit.py
tests/python/: lang_module_fixtures.py  test_backend_detection.py  test_bug6_prealloc.py  test_build.cc  test_build.py  test_build_inline.py  test_container.py  test_container_dlpack_conversion.py  test_copy.py  test_cubin_launcher.py  test_current_work_stream_gpu.py  test_dataclass_c_class.py  test_dataclass_common.py  test_dataclass_compare.py  test_dataclass_copy.py  test_dataclass_enum.py  test_dataclass_frozen.py  test_dataclass_gen_abi_cpp.py  test_dataclass_hash.py  test_dataclass_init.py  test_dataclass_pickle.py  test_dataclass_py_class.py  test_dataclass_repr.py  test_dataclasses_c_class.py  test_device.py  test_dlpack_exchange_api.py  test_dtype.py  test_error.py  test_examples.py  test_function.py  test_init_kw_only.py  test_ir_traits.py  test_lang_module_registration.py  test_libinfo.py  test_load_inline.py  (+24 more)
(+288 files in other folders)
