# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "tvm-ffi-stubgen"
description = "Rust stub generator for tvm-ffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[[bin]]
name = "tvm-ffi-stubgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.9"
libloading = "0.8"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tvm-ffi = { version = "0.1.0-alpha.0", path = "../tvm-ffi" }
